<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    tools:context="com.next.groupmeal.SignUpActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="45dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/profile"
            android:src="@drawable/user"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            />
        <TextView
            android:layout_marginBottom="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/signup"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/errorTextView"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/green"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/white"

            android:layout_marginBottom="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:textColor="@color/green"
            android:inputType="textEmailAddress"
            android:background="@drawable/roundedittext"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/white"

            android:layout_marginBottom="5dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:id="@+id/password"
            android:textColor="@color/green"
            android:inputType="textPassword"
            android:background="@drawable/roundedittext"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonstyle"
            android:text="@string/signup"
            android:id="@+id/signupBtn"
            android:textColor="@color/white"
            android:padding="1dp"/>


    <!--EDIT FROM TEXTVIEW TO THIS -->
        <com.facebook.login.widget.LoginButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/haveaccount"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:textStyle="italic"
            android:id="@+id/fblogin"
            android:layout_marginTop="30dp"
            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">





        </LinearLayout>




    </LinearLayout>

</LinearLayout>
